2009-06-03  Ben Abbott <bpabbott@mac.com>

	* plot/__gnuplot_has_feature__.m: Change version for 
	"x11_figure_position" from ">=4.3.0" to ">=4.2.5".
	* plot/__scatter__.m: If the color spec is empty, set using
	__next_line_color__.
	* plot/scatter3.m: Add demos.

2009-06-03  Jaroslav Hajek  <highegg@gmail.com>

	* polynomial/polyfit.m: Fix test.

2009-06-02  Rafael Laboissiere  <rafael@debian.org>

	* help/doc.m: In test, look also for the gzipped version of the
	info_file

2009-05-29  John W. Eaton  <jwe@octave.org>

	* plot/__gnuplot_get_var__.m: Insert missing semicolon.

2009-05-28  Ben Abbott <bpabbott@mac.com>

	* plot/__go_draw_axes__.m: Set x2range when xaxislocation=='top' and set
	y2range when yaxislocation=='right'. Simplified support for ticklabel
	separator '|'.
	* plot/__go_draw_figure__.m: Change 'autoscale fix' to 'autoscale keepfix'.
	* plot/colorbar.m: Add demos.

2009-05-28  Ben Abbott <bpabbott@mac.com>

	* plot/__go_draw_axes__.m: Add support for ticklabel separator '|'.

2009-05-28  Jaroslav Hajek  <highegg@gmail.com>

	* sparse/bicgstab.m: Improve preconditioning; avoid explicit inverse.
	* sparse/cgs.m: Improve preconditioning; avoid explicit inverse.

2009-05-28  Radek Salac  <salac.r@gmail.com>

	* sparse/bicgstab.m: New output when calling without arguments.
	Time optimization - remove certain checks linked to preconditioner which
	are unacceptably slow.
	* sparse/cgs.m: New output when calling without arguments.
	Time optimization - remove certain checks linked to preconditioner which
	are unacceptably slow. Rename internal variable to match bicgstab.

2009-05-27  Rik Wehbring  <rdrider0-list@yahoo.com>

	* plot/axis.m: Update documentation to reflect addition of "tight" option.

2009-05-27  Rik Wehbring  <rdrider0-list@yahoo.com>

	* ismember.m: Update examples to remove incorrect reference to residue function

2009-05-27  John W. Eaton  <jwe@octave.org>

	* image/imwrite.m: Convert indexed images to RGB before calling